@@ -15,6 +15,7 @@ linux-5gun.dev.machine=true
 linux-8bsg.azquo.home=/home/edward
 linux-8bsg.dev.machine=true
 linux-8bsg.scandir=/home/edward/filestoimport
+linux-8bsg.xmlscandir=/home/edward/xmlscan
 linux-8bsg.scanbusiness=Magento
 linux-8bsg.groovydir=/home/edward/ideaprojects/Toto/DatabaseServer/Groovy/
 #this one is hacky I know . . .
